20240117 빌더 패턴 적용